# whatif

./: .gitignore  README.md  palantir_whatif_research.md  pyproject.toml  pytest.ini  requirements-test.txt
.cursor/plans/: what-if_分析改进建议_6b405185.plan.md  项目运作说明_c434e5bb.plan.md
backup/: multi_relation_demo_backup.py  multi_relation_demo_backup2.py  multi_relation_demo_backup3.py  multi_relation_demo_backup4.py  simple_demo.py  simple_multi_relation_demo.py  supply_chain_demo.py
docs/: DESIGN_SPEC.md  whatif_图数据库分析_差距与完善.md
examples/: certifies_demo.py  demo_utils.py  multi_relation_demo.py  seed_certifies_neo4j.py  simple_computation_chain.py  simple_computation_seed_neo4j_data.py  supply_chain_delay_demo.py  supply_chain_rich_demo.py  supply_chain_seed_neo4j_data.py
src/domain/models/: __init__.py  computation_engine.py  computation_graph.py  computation_level.py  computation_node.py  computation_relation_type.py  computation_relationship.py  io_spec.py
src/domain/services/: __init__.py  computation_executor.py  computation_graph_executor.py  neo4j_graph_manager.py  what_if_simulator.py
test/: conftest.py  test_computation_graph_executor.py  test_models.py  test_neo4j_data_provider.py  test_what_if_simulator.py
