[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatif2"
version = "0.1.0"
description = "What-If analysis system based on computation graphs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.0",
  "neo4j>=5.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/domain"]
